--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>
             Grady's Website Portfolio
         </title>
-        <link rel="stylesheet" href="website.css">
+        <link rel="stylesheet" href="https://skiergr.github.io/website.css">
     </head>
     <body>
         <div class="container">
