--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <div class="content">
                 <div class="portfolioItems">
                     <div class="portfolioItem">
-                        <img style="background-image: url(photo-1549106765-3d312a9425e1.jpg)" class="portfolioImageBackground">
-                        <a href="First Website/index.html" class="imgText">
+                        <img style="background-image: url(https://skiergr.github.io/photo-1549106765-3d312a9425e1.jpg)" class="portfolioImageBackground">
+                        <a href="https://skiergr.github.io/index.html" class="imgText">
                             <div class="logo">
-                                <img src="planel.png" alt="" width="50px">
+                                <img src="https://skiergr.github.io/planel.png" alt="" width="50px">
                             </div>
                             <div class="subtitle">
                                 This is my first website. It has a slideshow of airplane images.
