--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="navbar">
                 <div class="leftNav">
                     <div class="navLink activeNavLink">
-                        <a href="website.html">Home</a>
+                        <a href="index.html">Home</a>
                     </div>
                     <div class="navLink">
                         <a href="about.html">About</a>
