--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="portfolioItem">
                         <div class="portfolioImageBackground" style="background-image: url(rain.jpg)"></div>
-                        <a href="Weather/weather.html" class="imgText">
+                        <a href="https://skiergr.github.io/weather/weather.html" class="imgText">
                             <div class="logo">
                                 <img src="weatherlogo.png" alt="" width="50px">
                             </div>
