--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             Grady's Website Portfolio
         </title>
         <link rel="stylesheet" href="website.css">
-        <link [DONALD] https://www.youtube.com/watch?v=v5LsmLvMnYo>
+        <link rel = "donald" a href "https://www.youtube.com/watch?v=v5LsmLvMnYo">
     </head>
     <body>
         <div class="container">
