--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="portfolioItem">
                         <div class="portfolioImageBackground" style="background-image: url(rain.jpg)"></div>
-                        <a href="weather/index.html" class="imgText">
+                        <a href="weather" class="imgText">
                             <div class="logo">
                                 <img src="weatherlogo.png" alt="" width="50px">
                             </div>
