--- a/weather/index.html
+++ b/weather/index.html
@@ -87,6 +87,6 @@
       </div>
     </div>
     <script src="skycons.js"></script>
-    <script src="weather.js"></script>
+    <script src="weather/weather.js"></script>
   </body>
 </html>
