--- a/Weather/index.html
+++ b/Weather/index.html
@@ -86,7 +86,7 @@
         </table>
       </div>
     </div>
-    <script src="Weather/skycons.js"></script>
-    <script src="Weather/website.js"></script>
+    <script src="../Weather/skycons.js"></script>
+    <script src="../Weather/website.js"></script>
   </body>
 </html>
