Weather JS Test

--- a/Weather/index.html
+++ b/Weather/index.html
@@ -87,6 +87,6 @@
       </div>
     </div>
     <script src="../Weather/skycons.js"></script>
-    <script src="../Weather/website.js"></script>
+    <script src="../Weather/websitetest.js"></script>
   </body>
 </html>
