--- a/Weather/index.html
+++ b/Weather/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="../Weather/website.css" />
   </head>
   <body>
-    
       <div class="main">
-        <button class="home" onclick = "window.location.href = `index.html`">Home</button>
+        <button class="home" onclick = "window.location.href = `../index.html`">Home</button>
         <div class="options">
           <button class="today">Today's Weather</button>
           <button class="threeDay">3 Day Weather</button>
