--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="portfolioItems">
                     <div class="portfolioItem">
                         <img style="background-image: url(photo-1549106765-3d312a9425e1.jpg)" class="portfolioImageBackground">
-                        <a href="First Website/index.html" class="imgText">
+                        <a href="Airplane/index.html" class="imgText">
                             <div class="logo">
                                 <img src="planel.png" alt="" width="50px">
                             </div>
