--- a/Airplane/index.html
+++ b/Airplane/index.html
@@ -19,6 +19,6 @@
                 Airplanes are so cool!
             </p>
         </section>
-        <script src="index.js"></script>
+        <script src="../Airplane/website.js"></script>
     </body>
 </html>
