--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="portfolioItem">
                         <div class="portfolioImageBackground" style="background-image: url(download.jpg)"></div>
-                        <a href="Rock Paper Scissors/index.html" class="imgText">
+                        <a href="Rock Paper and Scissors/index.html" class="imgText">
                             <div class="logo">
                                 <img src="Logo-WhiteCircle-512px.webp" alt="" width="50px">
                             </div>
