--- a/Rock Paper and Scissors/index.html
+++ b/Rock Paper and Scissors/index.html
@@ -40,8 +40,8 @@
                 Choose an option
             </h2>
             <div class="hands">
-                <img class="player-hand" src="./assets/rock.png" alt="">
-                <img class="computer-hand" src="./assets/rock.png" alt="">
+                <img class="player-hand" src="./Assets/rock.png" alt="">
+                <img class="computer-hand" src="./Assets/rock.png" alt="">
             </div>
             <div class="options">
                 <div class="topRow">
