--- a/Rock Paper and Scissors/index.html
+++ b/Rock Paper and Scissors/index.html
@@ -11,7 +11,7 @@
     <section class="game">
         <div class="buttons">
             <div class="home-button">
-                <button class = 'home-button' onclick = "window.location.href=`Grady's Website/Second Website/website.html`">
+                <button class = 'home-button' onclick = "window.location.href=`../index.html`">
                     Home
                 </button>
             </div>
