--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             <div class="content">
                 <div class="aboutMe">
                     <div class="imgProfile">
-                        <img src="profile.jpg" alt="">
+                        <img src="./Main Assets/profile.jpg" alt="">
                     </div>
                     <div class="profile">
                         <h1>
