--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <div class="content">
                 <div class="portfolioItems">
                     <div class="portfolioItem">
-                        <img style="background-image: url(photo-1549106765-3d312a9425e1.jpg)" class="portfolioImageBackground">
-                        <a href="Airplane/index.html" class="imgText">
+                        <img style=" background-image: url(photo-1549106765-3d312a9425e1.jpg)" class="portfolioImageBackground">
+                        <a href="./Main Assets/Airplane/index.html" class="imgText">
                             <div class="logo">
                                 <img src="planel.png" alt="" width="50px">
                             </div>
