--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <div class="content">
                 <div class="portfolioItems">
                     <div class="portfolioItem">
-                        <img style=" background-image: url(photo-1549106765-3d312a9425e1.jpg)" class="portfolioImageBackground">
-                        <a href="./Main Assets/Airplane/index.html" class="imgText">
+                        <img style=" background-image: url(./Main Assets/photo-1549106765-3d312a9425e1.jpg)" class="portfolioImageBackground">
+                        <a href="./Airplane/index.html" class="imgText">
                             <div class="logo">
-                                <img src="planel.png" alt="" width="50px">
+                                <img src="./Main Assets/planel.png" alt="" width="50px">
                             </div>
                             <div class="subtitle">
                                 This is my first website. It has a slideshow of airplane images.
