--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="content">
                 <div class="portfolioItems">
                     <div class="portfolioItem">
-                        <img style=" background-image: url(./Main Assets/photo-1549106765-3d312a9425e1.jpg)" class="portfolioImageBackground">
+                        <img style=" background-image: url(./Main%20Assets/photo-1549106765-3d312a9425e1.jpg)" class="portfolioImageBackground">
                         <a href="./Airplane/index.html" class="imgText">
                             <div class="logo">
                                 <img src="./Main Assets/planel.png" alt="" width="50px">
