--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                         </a>
                     </div>
                     <div class="portfolioItem">
-                        <div class="portfolioImageBackground" style="background-image: url(rain.jpg)"></div>
+                        <div class="portfolioImageBackground" style="background-image: url(./Main%20Assets/rain.jpg)"></div>
                         <a href="Weather/index.html" class="imgText">
                             <div class="logo">
-                                <img src="weatherlogo.png" alt="" width="50px">
+                                <img src="./Main Assets/weatherlogo.png" alt="" width="50px">
                             </div>
                             <div class="subtitle">
                                 This is my weather website. It takes weather information from an API using a proxy.
@@ -47,10 +47,10 @@
                         </a>
                     </div>
                     <div class="portfolioItem">
-                        <div class="portfolioImageBackground" style="background-image: url(download.jpg)"></div>
+                        <div class="portfolioImageBackground" style="background-image: url(./Main%20Assets/download.jpg)"></div>
                         <a href="Rock Paper and Scissors/index.html" class="imgText">
                             <div class="logo">
-                                <img src="Logo-WhiteCircle-512px.webp" alt="" width="50px">
+                                <img src="./Main Assets/Logo-WhiteCircle-512px.webp" alt="" width="50px">
                             </div>
                             <div class="subtitle">
                                 This is a rock paper scissors game. It was my first real experience with js.
@@ -58,7 +58,62 @@
                         </a>
                     </div>
                     <div class="portfolioItem">
-                        <div class="portfolioImageBackground" style="background-image: url(download-1.png)"></div>
+                        <div class="portfolioImageBackground" style="background-image: url(./Main%20Assets/download-1.png)"></div>
+                        <a href="" class="imgText">
+                            <div class="logo">
+                                <img src="./Main Assets/questionl.png" alt="" width="50px">
+                            </div>
+                            <div class="subtitle">
+                                I don't know what this is yet. I will make a new website soon!
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolioItem">
+                        <div class="portfolioImageBackground" style="background-image: url(./Main%20Assets/download-1.png)"></div>
+                        <a href="" class="imgText">
+                            <div class="logo">
+                                <img src="./Main Assets/questionl.png" alt="" width="50px">
+                            </div>
+                            <div class="subtitle">
+                                I don't know what this is yet. I will make a new website soon!
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolioItem">
+                        <div class="portfolioImageBackground" style="background-image: url(./Main%20Assets/download-1.png)"></div>
+                        <a href="" class="imgText">
+                            <div class="logo">
+                                <img src="./Main Assets/questionl.png" alt="" width="50px">
+                            </div>
+                            <div class="subtitle">
+                                I don't know what this is yet. I will make a new website soon!
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolioItem">
+                        <div class="portfolioImageBackground" style="background-image: url(./Main%20Assets/download-1.png)"></div>
+                        <a href="" class="imgText">
+                            <div class="logo">
+                                <img src="./Main Assets/questionl.png" alt="" width="50px">
+                            </div>
+                            <div class="subtitle">
+                                I don't know what this is yet. I will make a new website soon!
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolioItem">
+                        <div class="portfolioImageBackground" style="background-image: url(./Main%20Assets/download-1.png)"></div>
+                        <a href="" class="imgText">
+                            <div class="logo">
+                                <img src="./Main Assets/questionl.png" alt="" width="50px">
+                            </div>
+                            <div class="subtitle">
+                                I don't know what this is yet. I will make a new website soon!
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolioItem">
+                        <div class="portfolioImageBackground" style="background-image: url(./Main%20Assets/download-1.png)"></div>
                         <a href="" class="imgText">
                             <div class="logo">
                                 <img src="questionl.png" alt="" width="50px">
@@ -69,10 +124,10 @@
                         </a>
                     </div>
                     <div class="portfolioItem">
-                        <div class="portfolioImageBackground" style="background-image: url(download-1.png)"></div>
+                        <div class="portfolioImageBackground" style="background-image: url(./Main%20Assets/download-1.png)"></div>
                         <a href="" class="imgText">
                             <div class="logo">
-                                <img src="questionl.png" alt="" width="50px">
+                                <img src="./Main Assets/questionl.png" alt="" width="50px">
                             </div>
                             <div class="subtitle">
                                 I don't know what this is yet. I will make a new website soon!
@@ -80,10 +135,10 @@
                         </a>
                     </div>
                     <div class="portfolioItem">
-                        <div class="portfolioImageBackground" style="background-image: url(download-1.png)"></div>
+                        <div class="portfolioImageBackground" style="background-image: url(./Main%20Assets/download-1.png)"></div>
                         <a href="" class="imgText">
                             <div class="logo">
-                                <img src="questionl.png" alt="" width="50px">
+                                <img src="./Main Assets/questionl.png" alt="" width="50px">
                             </div>
                             <div class="subtitle">
                                 I don't know what this is yet. I will make a new website soon!
@@ -91,65 +146,10 @@
                         </a>
                     </div>
                     <div class="portfolioItem">
-                        <div class="portfolioImageBackground" style="background-image: url(download-1.png)"></div>
+                        <div class="portfolioImageBackground" style="background-image: url(./Main%20Assets/download-1.png)"></div>
                         <a href="" class="imgText">
                             <div class="logo">
-                                <img src="questionl.png" alt="" width="50px">
-                            </div>
-                            <div class="subtitle">
-                                I don't know what this is yet. I will make a new website soon!
-                            </div>
-                        </a>
-                    </div>
-                    <div class="portfolioItem">
-                        <div class="portfolioImageBackground" style="background-image: url(download-1.png)"></div>
-                        <a href="" class="imgText">
-                            <div class="logo">
-                                <img src="questionl.png" alt="" width="50px">
-                            </div>
-                            <div class="subtitle">
-                                I don't know what this is yet. I will make a new website soon!
-                            </div>
-                        </a>
-                    </div>
-                    <div class="portfolioItem">
-                        <div class="portfolioImageBackground" style="background-image: url(download-1.png)"></div>
-                        <a href="" class="imgText">
-                            <div class="logo">
-                                <img src="questionl.png" alt="" width="50px">
-                            </div>
-                            <div class="subtitle">
-                                I don't know what this is yet. I will make a new website soon!
-                            </div>
-                        </a>
-                    </div>
-                    <div class="portfolioItem">
-                        <div class="portfolioImageBackground" style="background-image: url(download-1.png)"></div>
-                        <a href="" class="imgText">
-                            <div class="logo">
-                                <img src="questionl.png" alt="" width="50px">
-                            </div>
-                            <div class="subtitle">
-                                I don't know what this is yet. I will make a new website soon!
-                            </div>
-                        </a>
-                    </div>
-                    <div class="portfolioItem">
-                        <div class="portfolioImageBackground" style="background-image: url(download-1.png)"></div>
-                        <a href="" class="imgText">
-                            <div class="logo">
-                                <img src="questionl.png" alt="" width="50px">
-                            </div>
-                            <div class="subtitle">
-                                I don't know what this is yet. I will make a new website soon!
-                            </div>
-                        </a>
-                    </div>
-                    <div class="portfolioItem">
-                        <div class="portfolioImageBackground" style="background-image: url(download-1.png)"></div>
-                        <a href="" class="imgText">
-                            <div class="logo">
-                                <img src="questionl.png" alt="" width="50px">
+                                <img src="./Main Assets/questionl.png" alt="" width="50px">
                             </div>
                             <div class="subtitle">
                                 I don't know what this is yet. I will make a new website soon!
