--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <div class="portfolioImageBackground" style="background-image: url(./Main%20Assets/download-1.png)"></div>
                         <a href="" class="imgText">
                             <div class="logo">
-                                <img src="questionl.png" alt="" width="50px">
+                                <img src="./Main Assets/questionl.png" alt="" width="50px">
                             </div>
                             <div class="subtitle">
                                 I don't know what this is yet. I will make a new website soon!
