Todo on Portfolio

--- a/index.html
+++ b/index.html
@@ -73,14 +73,20 @@
           <div class="portfolioItem">
             <div
               class="portfolioImageBackground"
-              style="background-image: url(./Main%20Assets/download-1.png)"
+              style="
+                background-image: url(./Main%20Assets/Weekly-To-Do-List.jpg);
+              "
             ></div>
             <a href="Todo List/index.html" class="imgText">
               <div class="logo">
-                <img src="./Main Assets/questionl.png" alt="" width="50px" />
+                <img
+                  src="./Main Assets/1200px-Checkmark_green.svg.png"
+                  alt=""
+                  width="50px"
+                />
               </div>
               <div class="subtitle">
-                I don't know what this is yet. I will make a new website soon!
+                This is a todo list where you can add different items.
               </div>
             </a>
           </div>
