--- a/Rock Paper and Scissors/index.html
+++ b/Rock Paper and Scissors/index.html
@@ -1,63 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Rock Paper and Scissors/website.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../Rock Paper and Scissors/website.css" />
     <title>Rock Paper Scissors</title>
-</head>
-<body>
+  </head>
+  <body>
     <section class="game">
-        <div class="buttons">
-            <div class="home-button">
-                <button class = 'home-button' onclick = "window.location.href=`../index.html`">
-                    Home
-                </button>
-            </div>
-            <div class="back-button fadeOut">
-                <button class="back-button fadeOut">
-                    Back
-                </button>
-            </div>           
+      <div class="buttons">
+        <div class="home-button">
+          <button
+            class="home-button"
+            onclick="window.location.href=`../index.html`"
+          >
+            Home
+          </button>
         </div>
-        <div class="score">
-            <div class="player-score">
-                <h2>Player: </h2>
-                <p>0</p>
-            </div>
-            <div class="computer-score">
-                <h2>Computer</h2>
-                <p>0</p>
-            </div>
+        <div class="back-button fadeOut">
+          <button class="back-button fadeOut">Back</button>
         </div>
-        <div class="intro">
-            <h1>Rock Paper Scissors</h1>
-            <button>Play</button>
+      </div>
+      <div class="score">
+        <div class="player-score">
+          <h2>Player:</h2>
+          <p>0</p>
         </div>
-        <div class="match fadeOut">
-            <h2 class="winner">
-                Choose an option
-            </h2>
-            <div class="hands">
-                <img class="player-hand" src="./Assets/rock.png" alt="">
-                <img class="computer-hand" src="./Assets/rock.png" alt="">
-            </div>
-            <div class="options">
-                <div class="topRow">
-                    <button class="rock">Rock</button>
-                    <button class="paper">Paper</button>
-                    <button class="scissors">Scissors</button>
-                </div>
-                <div class="bottomRow">
-                    <button class="lizard">Lizard</button>
-                    <button class="spock">Spock</button>
-                </div>
-                
-            </div>
+        <div class="computer-score">
+          <h2>Computer</h2>
+          <p>0</p>
         </div>
-
+      </div>
+      <div class="intro">
+        <h1>Rock Paper Scissors</h1>
+        <button>Play</button>
+      </div>
+      <div class="match fadeOut">
+        <h2 class="winner">Choose an option</h2>
+        <div class="hands">
+          <img class="player-hand" src="./Assets/rock.png" alt="" />
+          <img class="computer-hand" src="./Assets/rock.png" alt="" />
+        </div>
+        <div class="options">
+          <div class="topRow">
+            <button class="rock">Rock</button>
+            <button class="paper">Paper</button>
+            <button class="scissors">Scissors</button>
+          </div>
+          <div class="bottomRow">
+            <button class="lizard">Lizard</button>
+            <button class="spock">Spock</button>
+          </div>
+        </div>
+      </div>
     </section>
     <script src="../Rock Paper and Scissors/website.js"></script>
-</body>
+  </body>
 </html>
