--- a/Todo List/index.html
+++ b/Todo List/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c8c4718e6e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="website.css">
-    <title>Todo List</title>
+    <title>To-Do List</title>
 </head>
 <body>
     <header>
         <h1>
-            Todo List
+            To-Do List
         </h1>
     </header>
     <form>
