--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <div class="portfolioItem">
             <div
               class="portfolioImageBackground"
-              style="background-image: url(./Main%20Assets/download-1.png)"
+              style="background-image: url(./Main%20Assets/download-1)"
             ></div>
             <a href="" class="imgText">
               <div class="logo">
