--- a/Todo List/index.html
+++ b/Todo List/index.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/c8c4718e6e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="website.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/c8c4718e6e.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="website.css" />
     <title>To-Do List</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>
-            To-Do List
-        </h1>
+      <h1>To-Do List</h1>
     </header>
     <form>
-        <input type="text" class="todo-input"/>
-        <button class="todo-button" type="submit">
-            <i class="fas fa-plus-square"></i>
-        </button>
-        <div class="select">
-            <select name="todos" class = """ id=""></select>
-        </div>
+      <input type="text" class="todo-input" />
+      <button class="todo-button" type="submit">
+        <i class="fas fa-plus-square"></i>
+      </button>
+      <div class="select">
+        <select name="todos" class="filter-todo">
+          <option value="all">All</option>
+          <option value="completed">Completed</option>
+          <option value="umcompleted">Uncompleted</option>
+        </select>
+      </div>
     </form>
     <div class="todo-container">
-        <ul class="todo-list">
-        </ul>
+      <ul class="todo-list"></ul>
     </div>
     <div class="complete-container">
-        <button class="done">
-            Done
-        </button>
-    </div>    
-    <script src='./website.js'></script>
-</body>
+      <button class="done">Done</button>
+    </div>
+    <script src="./website.js"></script>
+  </body>
 </html>
